# MzAgentSub

./: .gitignore  README.md  pyproject.toml
distroy/: start_web.sh
scripts/: demo_adapters.py  demo_pipeline.py  playwright_preview.py  preview_web.sh  start_web.example.env  start_web.sh  test_adapters.sh  test_all.sh  test_contracts.sh  test_integration.sh  test_knowledge.sh  test_live_llm.sh  test_live_mcp.sh  test_orchestration.sh  test_perception.sh  test_runtime.sh  test_skills.sh  test_stm.sh
src/mz_agent/: __init__.py  capabilities.py  cli.py  config.py  http_headers.py  llm_profiles.py
src/mz_agent/adapters/: __init__.py  llm.py  mcp.py  rag.py  skill.py  tool.py
tests/: conftest.py
tests/adapters/: test_adapter_errors.py  test_adapters.py  test_live_configuration.py  test_profile_store.py
tests/contracts/: test_context_snapshot.py  test_guardrails_mapping.py  test_llm_contracts.py  test_plan_refs.py  test_tooling_contracts.py
tests/integration/: __init__.py  test_cli_roundtrip.py  test_model_discovery.py  test_pipeline_matrix.py  test_web_backend_integration.py  test_web_clarify_flow.py  test_web_profiles.py  test_web_roundtrip.py  test_web_session_controls.py  test_web_session_resume.py  web_testkit.py
tests/knowledge/: test_rag_adapter.py
tests/orchestration/: test_engines.py  test_pipeline.py  test_repl_history.py
tests/perception/: test_round_preparation.py
tests/runtime/: test_state_transitions.py  test_trace_inheritance.py  test_writeback_timing.py
tests/skills/: test_skill_adapter.py
tests/stm/: test_persistence.py
(+30 files in other folders)
