[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mz-agent"
version = "0.1.7"
description = "MzAgent 第一阶段 Python Slice 1 协议与状态门禁底座"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.68.0,<3.0.0",
    "mcp>=1.12.4,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pytest>=7.4.0,<9.0.0",
    "tomli>=2.0.0,<3.0.0; python_version < '3.11'",
]

[project.scripts]
mz-agent = "mz_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mz_agent*"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]



[mcp_servers.cunzhi]
type = "stdio"
command = "/mnt/d/Downloads/cunzhi-cli-v0.4.0-windows-x86_64/cz.exe"
tool_timeout_sec = 600.0
